
option java_outer_classname="ClearCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message ClearCommand {
	optional int64 requestId = 1;
	optional bool isAsync = 2;
	optional int32 flag = 3;
	optional sint32 datasourceClearedCallbackId = 4;
	optional string providerName = 5;
}